--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,9 @@ default = ["bevy/dynamic"]
 [dependencies]
 bevy = {version="0.4.0", default-features=true }
 bevy_screen_diags = "0.1"
+
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.dev]
+opt-level = 1
