--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "TileRpg"
+name = "tile_rpg"
 version = "0.1.0"
 authors = []
 edition = "2018"
@@ -9,5 +9,5 @@ repository = "https://github.com/GreeFine/FonFine"
 default = ["bevy/dynamic"]
 
 [dependencies]
-bevy = {version="0.4.0", default-features=true }
-bevy_screen_diags = "0.1"
+bevy = {version="0.5.0", default-features=true }
+bevy_screen_diags = "0.2"
